Fixed broken layout, added background pattern

--- a/app/components/LayoutWrapper/styles.css
+++ b/app/components/LayoutWrapper/styles.css
@@ -1,5 +1,4 @@
 .wrapper {
-  border: 4px solid pink;
   height: 100%;
   width: 100%;
 }
