--- a/app/containers/HomePage/styles.css
+++ b/app/containers/HomePage/styles.css
@@ -5,5 +5,6 @@
 @media (min-width: 768px) {
     .wrapper {
       margin-left: 256px;
+      max-height: 100vh;
     }
 }
